# bbc-recipe-scraper

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
context/: client_interface.py  mongodb_client.py
entities/: cuisine_entity.py  recipe_entity.py
repository/cuisines/: cuisines_repository.py  cuisines_repository_interface.py
repository/recipes/: recipes_repository.py  recipes_repository_interface.py
schemas/: cuisine_schema.py  recipe_schema.py
scraper/: CuisineScraper.py  ICusineScraper.py  IRecipeScraper.py  RecipeScraper.py  recipe_scraper.py
service/cuisines/: CuisineService.py  ICuisinesService.py
service/recipes/: IRecipesBatchFetch.py  IRecipesService.py  RecipeService.py
