[tool.poetry]
name = "recipe-service"
version = "0.1.0"
description = "Service for scraping recipes and storing them inside mongodb"
authors = ["Dominic Hui"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
